# tm-serve

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  startup.sh
